fixed the gap of projects

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -208,10 +208,9 @@ main {
 
 .main-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  gap: 50px;
+  gap: 40px;
 }
 
 .header {
@@ -223,6 +222,7 @@ main {
 
 .paragraph {
   position: relative;
+  flex-grow: 1;
   padding: 20px;
   border-radius: 5px;
   background-color: #ffffff;
